# cpp-starter

./: .dir-locals.el  .lsp-docker.yml  CMakeLists.txt  README.md
src/: main.cpp
